changes in home and developer page

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
     <script>
       if('serviceWorker' in navigator) {
           window.addEventListener('load', () => {
